--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="127" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/e">best web authoring software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="127" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -82,10 +82,10 @@
 <br>2018年7月15日结束
 <br>1 ETH = 6,000 GTMR代币
 <br>最低贡献 0.1 ETH (以太币)
-<br>最大贡献 20 ETH (以太币)<a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
+<br>最大贡献 20 ETH (以太币)</strong></span><br><br><span style="font-style: normal;">初期预售 1&nbsp;将结束于<strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
                         </div>
 
-                        <div class="countdown" data-end="2018/04/15"></div>
+                        <div class="countdown" data-end="2018/05/14"></div>
 
                     </div>
                     
