create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="67" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="67" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -116,8 +116,7 @@
 
             <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Early Birds 1
 </span><div><span style="font-weight: normal;">Total Supply: 150,000,000
-</span></div><div><span style="font-weight: normal;">Sold: 3,329,050
-</span></div><div><span style="font-weight: normal;">Balance: 146,670,950</span></div></h3>
+</span></div><div><span style="font-weight: normal;">Sold: 3,898,870</span></div><div><span style="font-weight: normal;">Balance: 146,101,130</span></div></h3>
 
                 <div class="progress1">
                     <div class="title-wrap">
