--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website creation software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="146" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="146" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -118,8 +118,7 @@
 
             <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">初期预售 1
 </span><div><span style="font-weight: normal;">总共应量: 150,000,000
-</span></div><div><span style="font-weight: normal;">以卖出: 3,229,050
-</span></div><div><span style="font-weight: normal;">余额: 146,670,950</span></div></h3>
+</span></div><div><span style="font-weight: normal;">以卖出: 3,898,870</span></div><div><span style="font-weight: normal; color: inherit;">余额: 146,101,130</span></div></h3>
 
                 <div class="progress1">
                     <div class="title-wrap">
