create github pages

--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="81" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="81" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -118,12 +118,12 @@
 
             <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">初期预售 1
 </span><div><span style="font-weight: normal;">总共应量: 150,000,000
-</span></div><div><span style="font-weight: normal;">已</span><span style="font-weight: normal; color: inherit;">卖出: 4,258,870</span></div><div><span style="font-weight: normal; color: inherit;">余额: 145,741,130</span></div></h3>
+</span></div><div><span style="font-weight: normal;">已</span><span style="font-weight: normal; color: inherit;">卖出: 4,738,870</span></div><div><span style="font-weight: normal; color: inherit;">余额: 145,261,130</span></div></h3>
 
                 <div class="progress1">
                     <div class="title-wrap">
                         <div class="progressbar-title">
-                            <p>已卖出巴仙率</p>
+                            <p>已卖出巴仙率 3.15%</p>
                         </div>
                         <div class="progressbar-number">3</div>
                         <span>%</span>
@@ -150,7 +150,7 @@
 </span></div><div><span style="font-size: 17px; font-weight: normal;">（只有一个贡献地址）
 </span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ 1 ETH (以太币) = 6,000 GTMR代币
 </span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 最小贡献0.1 ETH (以太币)</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
-</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div></h3>
+</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个零售以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div></h3>
                 <small class="mbr-section-subtitle"></small>
             </div>
         </div>
