--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/o">mobile website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -121,7 +121,7 @@
                 <div class="progress1">
                     <div class="title-wrap">
                         <div class="progressbar-title">
-                            <p>Percentage Sold 3.15%</p>
+                            <p>Percentage Sold (3.15%)</p>
                         </div>
                         <div class="progressbar-number">3</div>
                         <span>%</span>
