--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="81" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/f">simple web maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="81" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -123,7 +123,7 @@
                 <div class="progress1">
                     <div class="title-wrap">
                         <div class="progressbar-title">
-                            <p>已卖出巴仙率 3.15%</p>
+                            <p>已卖出巴仙率 (3.15%)</p>
                         </div>
                         <div class="progressbar-number">3</div>
                         <span>%</span>
