create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -145,7 +145,7 @@
 </span></div><div>b)<span style="font-weight: normal;"> integrated with Instant cryptocurrency Exchange<br></span><div><br></div>Early Birds 1 (Private Sales Event)<br><div><br>0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1</div></div></h3>
                 <small class="mbr-section-subtitle">(Only One Contribution Address)<br><br>◎ 1 ETH = 6,000 GTMR Token
 <br><br>◎ Minimum contribution 0.1 ETH
-<br><br>◎ Maximum Contribution of 20 ETH per-Ethereum-address for retail investor, to ensure a fair share of this unique business opportunity for global participation<br>◎ For initial contribution of more than 20 ETH, please contact us for information regarding <a href="page3.html">Institutional Contribution</a>. Terms and conditions applied<br>◎ Exchange listing price was targeted at USD $0.12 pertoken as time of writing. However please be advised that the final listing price may be variable according to various external factors. One of the determining factors will be the current price of Ether at time of listing<br></small>
+<br><br>◎ Maximum Contribution of 20 ETH per-Ethereum-address for retail investor, to ensure a fair share of this unique business opportunity for global participation<br><br>◎ For initial contribution of more than 20 ETH, please contact us for information regarding <a href="page3.html">Institutional Contribution</a>. Terms and conditions applied<br><br>◎ Exchange listing price was targeted at USD $0.12 pertoken as time of writing. However please be advised that the final listing price may be variable according to various external factors. One of the determining factors will be the current price of Ether at time of listing<br></small>
             </div>
         </div>
     </div>
