--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="125" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="125" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -150,7 +150,7 @@
 </span></div><div><span style="font-size: 17px; font-weight: normal;">（只有一个贡献地址）
 </span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ 1 ETH (以太币) = 6,000 GTMR代币
 </span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 最小贡献0.1 ETH (以太币)</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
-</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个零售以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div></h3>
+</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个零售以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ 对于第一次贡献超过20个ETH的，请联系我们有关机构贡献的信息。条款和条件适用</span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ &nbsp;交易所挂牌目标价定为0.12美元，是写作时所定。 但请注意，最终上市价格可能有异于各种外来因素。 其中一个决定性因素是当前以太币在上市时的价格。</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div></h3>
                 <small class="mbr-section-subtitle"></small>
             </div>
         </div>
