create github pages

--- a/page8.html
+++ b/page8.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="79" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/c">best free site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="79" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -144,7 +144,7 @@
                 <h3 class="mbr-section-title display-2"><span style="font-size: 17px; font-weight: normal;">GETModer (格摩特)是基于区块链的分散式(去中心化)平台：</span><br><br><span style="font-size: 17px; font-weight: normal;">
 </span><div><span style="font-size: 17px; font-weight: normal;">a）以安全合法的方式借入和借出加密数字货币资产。
 </span></div><div><span style="font-size: 17px; font-weight: normal;">b）与 Instant cryptocurrency Exchange (快速加密数字货币转换/兑换站/中心) 整合为一个平台
-</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><br><div><span style="font-size: 17px; font-weight: normal;">初期预售优惠配套1（私人销售活动）</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
+</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><br><div><span style="font-size: 17px; font-weight: normal;">初期预售优惠配套2（私人销售活动）</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
 </span></div><div><span style="font-size: 17px;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1</span></div><br><div><span style="font-size: 17px;">
 </span></div><div><span style="font-size: 17px; font-weight: normal;">（只有一个贡献地址）
 </span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ 1 ETH (以太币) = 5,500 GTMR代币
