create github pages

--- a/page5.html
+++ b/page5.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <section id="ext_menu-z" data-rv-view="170">
+  <section id="ext_menu-z" data-rv-view="227">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -43,7 +43,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page8.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page8.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item"><a class="nav-link link" href="https://www.facebook.com/GETModer-Community-590330284661722/">Facebook</a></li><li class="nav-item"><a class="nav-link link" href="https://t.me/joinchat/Htx911KPfw9T3huUOAGrIw">Telegram</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website builder software</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="174" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="231" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -92,7 +92,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="172" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="229" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
